--- a/index.css
+++ b/index.css
@@ -1,21 +1,18 @@
 body {
-  background-color: #F4E288;
+  background-color: #45EAD8;
 }
 
-
-
-
-.text{
-    font-family: 'DM Serif Text', serif;
-    color:black;
-    font-size: 36px;
-    text-align: center;
-}
 
 .header{
     font-family: 'Literata', serif;
     color:black;
     text-align: center;
+    font-size: 96px;
+    margin-bottom: 5px;
+}
+
+.header:hover{
+  color: lightblue;
 }
 
 .title{
@@ -23,13 +20,13 @@ body {
     color:white;
     font-size: 20px;
     text-align: center;
+
 }
 
-div{
-  background-color: lightblue;
-  width: 350px
-  border: 10px lightblue;
-  padding: 20px
-  margin: 20px
-
+.intro{
+  width: 300px;
+  height: 300px;
+  border: 5px solid lightblue;
+  padding: 30px;
+  margin: 20px;
 }
