--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 body {
   background-color: #F0AC67;
+  margin: 0;
+  padding: 0;
 }
 
-
 .header{
-
     font-family: 'Literata', serif;
     color:black;
     text-align: center;
@@ -47,13 +47,14 @@ hr{
 }
 
 .intro{
-  width: 300px;
+  width: 275px;
   height: 400px;
   border: 3px solid white;
   padding: 30px;
   margin: 10px;
-  position: fixed;
-  top: 270px;
+  position: absolute;
+  top: 650px;
+  left: 50px;
 }
 
 .icons{
@@ -67,6 +68,52 @@ hr{
   color: #CA9748;
 }
 
-.columns{
-  column-count: 3;
+.night{
+  border-radius: 150%;
+  border-color: solid black;
+  width: 180px;
+  height: 180px;
+  position: absolute;
+  top: 240px;
+  left: 155px;
+}
+
+.tokyoghoul{
+  border-radius: 150%;
+  border-color: solid black;
+  width: 215px;
+  height: 215px;
+  position: absolute;
+  top: 400px;
+  left: 40px;
+}
+
+.aesthetic{
+  border-radius: 150%;
+  border-color: solid black;
+  width: 160px;
+  height: 160px;
+  position: absolute;
+  top: 400px;
+  left: 260px;
+}
+
+.scroll{
+  overflow: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
